public class Resource {
    String name;
    int amount;

    public Resource(String name, int amount) {
        this.name = name;
        this.amount = amount;
    }
}

